--- a/DeckOfOneCard/Base.lproj/Main.storyboard
+++ b/DeckOfOneCard/Base.lproj/Main.storyboard
@@ -1,26 +1,69 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="15705" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="R01-Cn-ogS">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="17156" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="R01-Cn-ogS">
     <device id="retina6_1" orientation="portrait" appearance="light"/>
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="15706"/>
+        <deployment identifier="iOS"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="17125"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
+        <capability name="System colors in document resources" minToolsVersion="11.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
-        <!--View Controller-->
+        <!--Card View Controller-->
         <scene sceneID="sGY-0Z-TKh">
             <objects>
-                <viewController id="R01-Cn-ogS" sceneMemberID="viewController">
+                <viewController id="R01-Cn-ogS" customClass="CardViewController" customModule="DeckOfOneCard" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="IZa-P0-4L8">
                         <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
-                        <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
+                        <subviews>
+                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="QSH-Aj-c9g">
+                                <rect key="frame" x="71.5" y="212.5" width="271" height="481"/>
+                            </imageView>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Deck of Card" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="TFn-Zm-qVY">
+                                <rect key="frame" x="148" y="178" width="118" height="25.5"/>
+                                <fontDescription key="fontDescription" type="system" weight="light" pointSize="21"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="4Lv-Un-kI0">
+                                <rect key="frame" x="20.5" y="729" width="373" height="44"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="44" id="OMh-Jh-1y9"/>
+                                </constraints>
+                                <state key="normal" title="Draw"/>
+                                <connections>
+                                    <action selector="drawButtonTapped:" destination="R01-Cn-ogS" eventType="touchUpInside" id="9iJ-gn-fXR"/>
+                                </connections>
+                            </button>
+                        </subviews>
                         <viewLayoutGuide key="safeArea" id="dAx-36-yHn"/>
+                        <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                        <constraints>
+                            <constraint firstItem="QSH-Aj-c9g" firstAttribute="centerY" secondItem="dAx-36-yHn" secondAttribute="centerY" id="2uu-Uz-k0b"/>
+                            <constraint firstItem="4Lv-Un-kI0" firstAttribute="centerX" secondItem="dAx-36-yHn" secondAttribute="centerX" id="8D0-vy-rC0"/>
+                            <constraint firstItem="TFn-Zm-qVY" firstAttribute="centerX" secondItem="dAx-36-yHn" secondAttribute="centerX" id="K8j-hj-4MQ"/>
+                            <constraint firstItem="QSH-Aj-c9g" firstAttribute="centerX" secondItem="dAx-36-yHn" secondAttribute="centerX" id="NzV-tP-WHa"/>
+                            <constraint firstItem="4Lv-Un-kI0" firstAttribute="width" secondItem="IZa-P0-4L8" secondAttribute="width" multiplier="0.9" id="Zsv-WJ-UVZ"/>
+                            <constraint firstItem="QSH-Aj-c9g" firstAttribute="height" secondItem="IZa-P0-4L8" secondAttribute="height" multiplier="0.53683" id="eyO-Ax-65P"/>
+                            <constraint firstItem="4Lv-Un-kI0" firstAttribute="top" secondItem="QSH-Aj-c9g" secondAttribute="bottom" constant="35.5" id="gjl-ZX-dbG"/>
+                            <constraint firstItem="QSH-Aj-c9g" firstAttribute="firstBaseline" secondItem="TFn-Zm-qVY" secondAttribute="baseline" constant="14.5" symbolType="layoutAnchor" id="iGE-Ee-vsL"/>
+                            <constraint firstItem="QSH-Aj-c9g" firstAttribute="width" secondItem="IZa-P0-4L8" secondAttribute="width" multiplier="0.654589" id="l9M-Ra-SD0"/>
+                        </constraints>
                     </view>
+                    <connections>
+                        <outlet property="cardImageView" destination="QSH-Aj-c9g" id="T4Z-R4-fXA"/>
+                        <outlet property="cardLabel" destination="TFn-Zm-qVY" id="6Dx-yN-91g"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="ZKM-Hs-mUX" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="366" y="-254"/>
+            <point key="canvasLocation" x="365.21739130434787" y="-254.46428571428569"/>
         </scene>
     </scenes>
+    <resources>
+        <systemColor name="systemBackgroundColor">
+            <color white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+        </systemColor>
+    </resources>
 </document>
